infrastructure/myapp/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: workshop
spec:
  ports:
  - port: 3000
    protocol: TCP
  type: ClusterIP
  selector:
   role: frontend
